# Tinker_gazebo_ros2_simulation

./: README.md  frames_2023-08-06_15.44.53.gv
src/navigation_sim/: CMakeLists.txt  package.xml
src/navigation_sim/launch/: gazebo_robot.launch.py  navigation.launch.py
src/navigation_sim/maps/test_simple_world/: map.pgm  map.yaml
src/navigation_sim/params/: ekf.yaml  local_nav2_params.yaml
src/navigation_sim/rviz/: nav.rviz
src/navigation_sim/src/: transfer_data.cpp
src/navigation_sim/worlds/: test_world.world  test_world_simple.world
src/test_ur_controller/: package.xml  setup.cfg  setup.py
src/test_ur_controller/test_ur_controller/: publisher_joint_trajectory_controller.py
src/tinker_controller/: CMakeLists.txt  package.xml  tinker_controller_plugin.xml
src/tinker_controller/include/tinker_controller/: odometry.hpp  speed_limiter.hpp  tinker_controller.hpp  visibility_control.h
src/tinker_controller/src/: odometry.cpp  speed_limiter.cpp  tinker_controller.cpp  tinker_controller_parameter.yaml
src/tinker_controller/test/: test_load_tinker_controller.cpp
src/tinker_controller/test/config/: test_tinker_controller_parameter.yaml
src/tinker_description/config/: sensors_3d.yaml
src/tinker_description/config/ur5/: joint_limits.yaml  ur_2021_calibration.yaml
src/tinker_description/meshes/: wrist.STL
src/tinker_description/rviz/: view_robot.rviz
src/tinker_description/srdf/: ur_macro.srdf.xacro
src/tinker_description/urdf/: tinker_arm.urdf.xacro  tinker_base.urdf.xacro  tinker_gazebo.urdf.xacro
src/tinker_description/urdf/inc/: _d435i.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro
src/tinker_description/urdf/inc/realsense/: _d435.urdf.xacro  _usb_plug.urdf.xacro
src/tinker_moveit/: CMakeLists.txt  package.xml
src/tinker_moveit/launch/: moveit_demo.launch.py
src/tinker_moveit/src/: arm_controller.cpp  move_to_point.cpp  tutorial.cpp
src/tinker_moveit/srv/: URControlService.srv
src/tinker_msgs/: CMakeLists.txt  package.xml
src/tinker_sim/: CMakeLists.txt  package.xml
src/tinker_sim/config/: test_goal_publishers_config.yaml  tinker_controller_manager.yaml
src/tinker_sim/launch/: arm_moveit.launch.py  display.launch.py  gazebo_sim.launch.py  test_joint_trajectory_controller.launch.py  ur_moveit.launch.py
src/tinker_sim/src/description/inc/: base_macro_display.xacro  base_macro_gazebo.xacro
