<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tinker_controller</name>
  <version>0.0.0</version>
  <description>Controller for Tinker</description>
  <maintainer email="weibingchuan20@gmail.com">Wei Bingchuan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/tinker_controller_plugin.xml"/>
  </export>

</package>
